--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,14 +1,22 @@
 html, body {
     background-color: black;
     color: white;
-    font-family: "Yanone Kaffeesatz", sans-serif;
-    font-weight: 350;
+    font-family: "Courier New", Courier, monospace;
 }
+
 h1 {
-    font-size: 2.5em;
+    font-size: 3.5em;
+    padding: 0;
+    margin: 0;
+    text-align: center;   
+}
+
+.header {
+    font-size: 3em;
     padding: 0;
     margin: 0;
 }
+
 .nav {
     background-color: #2d2d2d;
     list-style-type: none;
@@ -17,6 +25,7 @@ h1 {
     display: block;
     overflow: hidden;
 }
+
 .nav-element {
     text-decoration: none;
     padding: 5px;
@@ -24,6 +33,7 @@ h1 {
     float: left;
     color: white;
 }
+
 li a {
     display: block;
     color: white;
@@ -31,9 +41,11 @@ li a {
     padding: 10px 12px;
     text-decoration: none
 }
+
 .nav-element:hover {
     background-color: #7c7c7c;
 }
+
 .active {
     text-decoration: none;
     padding: 5px;
@@ -42,6 +54,14 @@ li a {
     color: white;
     background-color: #BB86FC;
 }
+
 .nav-element li a:hover {
     color: black;
+}
+
+p {
+    font-size: 1.25em;
+    margin: 0;
+    padding: 0;
+    margin-left: 355px;
 }
