--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,7 +1,7 @@
 html, body {
     background-color: black;
     color: white;
-    font-family: "Courier New", Courier, monospace;
+    font-family: 'PT Sans', sans-serif;
 }
 
 h1 {
@@ -12,15 +12,25 @@ h1 {
 }
 
 .header {
-    font-size: 3em;
-    padding: 0;
-    margin: 0;
+    font-size: 2.5em;
+    padding: 10px 12px;
+    margin: 100;
+    padding-left: 30;
+    margin-left: 100;
+    display: inline;
+    text-decoration: none;
+    color: white;
+}
+
+.header a {
+    text-decoration: none;
+    color: white;
 }
 
 .nav {
     background-color: #2d2d2d;
     list-style-type: none;
-    margin: 0;
+    margin: 10;
     padding: 0;
     display: block;
     overflow: hidden;
@@ -30,7 +40,7 @@ h1 {
     text-decoration: none;
     padding: 5px;
     display: inline;
-    float: left;
+    float: right;
     color: white;
 }
 
@@ -50,7 +60,7 @@ li a {
     text-decoration: none;
     padding: 5px;
     display: inline;
-    float: left;
+    float: right;
     color: white;
     background-color: #BB86FC;
 }
@@ -63,5 +73,23 @@ p {
     font-size: 1.25em;
     margin: 0;
     padding: 0;
-    margin-left: 355px;
+    font-family: 'Open Sans', sans-serif;
+}
+
+.section {
+    padding: 10px;
+    background-color: #1f1f1f;
+    margin-top: 20px;
+}
+
+.section-header {
+    font-size: 2em;
+    margin: 0;
+}
+
+.accent-header {
+    background-color: #BB86FC;
+    float: left;
+    padding: 2px;
+    margin-right: 5px;
 }
