--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -5,17 +5,20 @@ html, body {
 }
 
 h1 {
-    font-size: 3.5em;
+    font-size: 2em;
     padding: 0;
-    margin: 0;
-    text-align: center;   
+    margin: 50px;
+    text-align: center;
+    font-family: 'Lexend Peta', sans-serif;
 }
 
 .header {
-    font-size: 3em;
-    padding: 10px 12px;
+    font-size: 1.755em;
+    padding: 7px;
+    margin: 0;
     display: inline;
     font-family: 'Lexend Peta', sans-serif;
+    float: left;
 }
 
 .header a {
@@ -34,7 +37,7 @@ h1 {
 
 .nav-element {
     text-decoration: none;
-    padding: 10px;
+    padding: 5px;
     display: inline;
     float: right;
     color: white;
@@ -54,7 +57,7 @@ li a {
 
 .active {
     text-decoration: none;
-    padding: 10px;
+    padding: 5px;
     display: inline;
     float: right;
     color: white;
@@ -96,6 +99,7 @@ p {
     margin-right: 5px;
     display: inline;
 }
+
 .accent-second-header {
     background-color: #7c7c7c;
     display: inline;
