--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -12,6 +12,17 @@ h1 {
     font-family: 'Lexend Peta', sans-serif;
 }
 
+.portfolio-section-header {
+    font-size: 2.5em;
+    padding: 0;
+    margin: 15px;
+    margin-left: 25px;
+    font-family: 'Lexend Peta', sans-serif;
+    text-decoration: underline;
+    width: 63%;
+    float: left;
+}
+
 .header {
     font-size: 1.755em;
     padding: 7px;
@@ -68,6 +79,10 @@ li a {
     color: black;
 }
 
+a {
+    color: white;
+}
+
 p {
     font-size: 1em;
     margin: 0;
@@ -76,21 +91,25 @@ p {
 }
 
 .center-image {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+    display: inline;
+    float: right;
 }
+
 .section {
     padding: 20px;
     background-color: #1f1f1f;
     margin-top: 20px;
-    margin: 10px;
-    display: block;
+    margin: 20px;
+    float: left;
+    display: inline;
+    width: 90%
 }
 
 .section-header {
     font-size: 1.5em;
     margin: 0;
+    font-family: 'Lexend Peta', sans-serif;
+    padding-bottom: 10px;
 }
 
 .accent-header {
@@ -105,4 +124,24 @@ p {
     display: inline;
     padding: 2px;
     margin-right: 5px;
+}
+.portfolio-media {
+    width: 70%;
+    display: block;
+    margin-bottom: 10px;
+    padding: 0;
+}
+.portfolio-media-header {
+    font-family: 'Lexend Peta', sans-serif;
+    font-size: 1.25em;
+}
+.home-header {
+    font-size: 2.5em;
+    padding: 0;
+    margin: 15px;
+    margin-left: 2px;
+    font-family: 'Lexend Peta', sans-serif;
+    text-decoration: underline;
+    width: 70%;
+    float: left;
 }
