--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -102,7 +102,7 @@ p {
     margin: 20px;
     float: left;
     display: inline;
-    width: 92.75%;
+    width: 92.5%;
 }
 
 .section-header {
@@ -139,7 +139,9 @@ p {
     font-size: 2.5em;
     padding: 0;
     margin: 15px;
-    margin-left: 2px;
+    margin-left: 25px;
     font-family: 'Lexend Peta', sans-serif;
     text-decoration: underline;
+    width: 63%;
+    float: left;
 }
