--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -15,11 +15,10 @@ h1 {
     font-size: 2.5em;
     padding: 0;
     margin: 15px;
-    margin-left: 25px;
+    margin-left: auto;
     font-family: 'Lexend Peta', sans-serif;
     text-decoration: underline;
-    width: 63%;
-    float: left;
+    width: 95%;
 }
 
 .header {
@@ -93,20 +92,21 @@ p {
 }
 
 .center-image {
-    display: inline;
+    width: 40%;
     float: right;
-    margin-left: 10px;
-    margin-top: 20px;
+    margin-left: auto;
 }
 
 .section {
     padding: 20px;
     background-color: #1f1f1f;
     margin-top: 20px;
-    margin: 20px;
-    float: left;
-    display: inline;
-    width: 91.5%;
+    margin-bottom: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    width: 90%;
+    height: 100%;
 }
 
 .section-header {
@@ -127,10 +127,11 @@ p {
     background-color: #7c7c7c;
     display: inline;
     padding: 2px;
+    margin-top: 5px;
     margin-right: 5px;
 }
 .portfolio-media {
-    width: 70%;
+    width: 60%;
     display: block;
     margin-bottom: 10px;
     padding: 0;
@@ -143,9 +144,8 @@ p {
     font-size: 2.5em;
     padding: 0;
     margin: 15px;
-    margin-left: 25px;
+    margin-left: auto;
     font-family: 'Lexend Peta', sans-serif;
     text-decoration: underline;
-    width: 63%;
-    float: left;
+    width: 95%;
 }
