--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,3 +1,8 @@
+/*html elements*/
+a {
+    color: white;
+}
+
 html, body {
     background-color: black;
     color: white;
@@ -11,15 +16,25 @@ h1 {
     font-family: 'Lexend Peta', sans-serif;
 }
 
-.portfolio-section-header {
-    font-size: 2.5em;
-    padding: 0;
-    margin: 15px;
-    margin-left: auto;
-    font-family: 'Lexend Peta', sans-serif;
-    text-decoration: underline;
-    width: 95%;
+li {
+    font-family: 'PT Sans', sans-serif;
 }
+
+li a {
+    display: block;
+    text-align: center;
+    padding: 10px 12px;
+    text-decoration: none
+}
+
+p {
+    font-size: 1em;
+    margin: 0;
+    padding: 1px;
+    font-family: 'Open Sans', sans-serif;
+}
+
+/*header classes*/
 
 .header {
     font-size: 1.755em;
@@ -28,15 +43,14 @@ h1 {
     display: inline;
     font-family: 'Lexend Peta', sans-serif;
     float: left;
-}
-li {
-    font-family: 'PT Sans', sans-serif;
-}
-.header a {
     text-decoration: none;
-    color: white;
 }
 
+.header a {
+    text-decoration: none;
+}
+
+/*nav classes*/
 .nav {
     background-color: #2d2d2d;
     list-style-type: none;
@@ -53,14 +67,6 @@ li {
     display: inline;
     float: right;
     color: white;
-}
-
-li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 10px 12px;
-    text-decoration: none
 }
 
 .nav-element:hover {
@@ -80,23 +86,7 @@ li a {
     color: black;
 }
 
-a {
-    color: white;
-}
-
-p {
-    font-size: 1em;
-    margin: 0;
-    padding: 1px;
-    font-family: 'Open Sans', sans-serif;
-}
-
-.center-image {
-    width: 40%;
-    float: right;
-    margin-left: auto;
-}
-
+/*section classes*/
 .section {
     padding: 20px;
     background-color: #1f1f1f;
@@ -116,6 +106,7 @@ p {
     padding-bottom: 10px;
 }
 
+/*accent header classes*/
 .accent-header {
     background-color: #BB86FC;
     padding: 2px;
@@ -130,6 +121,18 @@ p {
     margin-top: 5px;
     margin-right: 5px;
 }
+
+/*portfolio page classes*/
+.portfolio-section-header {
+    font-size: 2.5em;
+    padding: 0;
+    margin: 15px;
+    margin-left: auto;
+    font-family: 'Lexend Peta', sans-serif;
+    text-decoration: underline;
+    width: 95%;
+}
+
 .portfolio-media {
     width: 60%;
     display: block;
@@ -139,6 +142,21 @@ p {
 .portfolio-media-header {
     font-family: 'Lexend Peta', sans-serif;
     font-size: 1.25em;
+}
+
+/*Home page classes*/
+.center-image {
+    width: 45%;
+    float: right;
+    margin-left: auto;
+}
+
+.home-second-header {
+    font-size: 1.5em;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    font-family: 'Lexend Peta', sans-serif;
+    padding-bottom: 10px;
 }
 .home-header {
     font-size: 2.5em;
