--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -66,7 +66,7 @@ p {
 .nav-element {
     text-decoration: none;
     padding: 5px;
-    width: 75px;
+    width: fit-content;
     display: inline;
     float: right;
     color: white;
@@ -79,7 +79,7 @@ p {
 .active {
     text-decoration: none;
     padding: 5px;
-    width: 75px;
+    width: fit-content;
     display: inline;
     float: right;
     color: white;
@@ -169,7 +169,7 @@ p {
 
 /*Home page classes*/
 .center-image {
-    width: 35%;
+    width: 40%;
     float: right;
 }
 
